--- a/index.html
+++ b/index.html
@@ -81,6 +81,89 @@
             </div>
 
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
+
+    <title>CARIÑOS JULIET</title>
+</head>
+
+<body>
+    <header>
+        <nav class="nav_container" id="menu">
+            <div class="nav_logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
+
+            <div class="nav_enlaces" id="nav">
+                <div class="nav_enlace actual"><a href="index.html">Productos</a></div>
+                <div class="nav_enlace"><a href="#">Como Comprar</a></div>
+                <div class="nav_enlace"><a href="#">Nosotros</a></div>
+                <div class="nav_enlace"><a href="#">Contacto</a></div>
+            </div>
+
+            <div class="bi bi-list hamburguesa" id="hamburguesa">
+
+            </div>
+
+        </nav>
+
+        <section class="slider_container">
+            <div class="slider_imagenes" id="slider_imagenes">
+                <img src="img/img1.png" class="slider_img">
+
+            </div>
+
+
+            <!-- flechas -->
+            <div class="flechas">
+                <div class="bi bi-arrow-left-short slider_prev" id="slider_prev"> </div>
+                <div class="bi bi-arrow-right-short slider_next" id="slider_next"> </div>
+            </div>
+
+
+
+        </section>
+    </header>
+
+    <div class="productos">
+        <section class="articulo">
+            <h1>TAZAS</h1>
+            <div class="cards">
+                <div class="card">
+                    <img src="img/card1.png" alt="">
+                    <h3>Tazas de cerámica</h3>
+
+                </div>
+
+                <div class="card">
+                    <img src="img/card2.png" alt="">
+                    <h3>Jarrones de cerámica</h3>
+
+                </div>
+
+               
+
+            </div>
+
+
+
+        </section>
+
+        <section class="articulo">
+            <h1>SUBLIMADO</h1>
+            <div class="cards">
+                
+            </div>
+
+
 
         </section>
 
@@ -116,11 +199,21 @@
 
     <footer>
         <div class="contacto">
-            <div><i class="bi bi-geo-alt-fill"></i>Aquí la dirección de la tienda</div>
+            <div><i class="bi bi-geo-alt-fill"></i>Buenos Aires, Argentina</div>
             <div><i class="bi bi-telephone-fill"></i>+58 12345678</div>
             <div><i class="bi bi-envelope-fill"></i>correo@gmail.com</div>
         </div>
+
+        <div class="logo">
+            <img src="img/logo.png" alt="logo">
+        </div>
         <div class="redes">
+            <form action="" class="suscribirse">
+                <p>Ingresa tus datos para recibir información de nuestros productos</p>
+                <input type="text" name="nombre" id="" placeholder="Nombre y Apellido">
+                <input type="email" name="mail" id="" placeholder="Correo electrónico">
+                <input type="button" value="Suscribirse" class="enviar">
+            </form>
             <a href="instagram.com"><i class="bi bi-instagram"></i></a>
             <a href="facebook.com"><i class="bi bi-facebook"></i></a>
             <a href="https://wa.me/+19737353610"><i class="bi bi-whatsapp"></i></a>
