--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +25,7 @@
                 <div class="nav_enlace actual"><a href="index.html">Productos</a></div>
                 <div class="nav_enlace"><a href="#">Como Comprar</a></div>
                 <div class="nav_enlace"><a href="#">Nosotros</a></div>
-                <div class="nav_enlace"><a href="#">Contacto</a></div>
+                <div class="nav_enlace"><a href="#footer">Contacto</a></div>
             </div>
 
             <div class="bi bi-list hamburguesa" id="hamburguesa">
@@ -125,7 +126,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="footer">
         <div class="contacto">
             <div><i class="bi bi-geo-alt-fill"></i>Buenos Aires, Argentina</div>
             <div><i class="bi bi-telephone-fill"></i>+58 12345678</div>
